fix  alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -23,7 +23,12 @@ html {
     position: relative;
 }
 
-.icon {
+.icon_home {
+    position: absolute;
+    left: 5px;
+}
+
+.icon_info {
     position: absolute;
     left: 5px;
 }
